2012-12-18	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .57
	* Kernel 3.4:
		- keep in sync with stable release .24
	* Kernel 3.6:
		- keep in sync with stable release .11
	* Kernel 3.7:
		- keep in sync with stable release .1

2012-12-17	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.6:
		- keep in sync with stable release .10

2012-12-16	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.7:
		- Use most recent Linux release
	* Kernel 3.6:
		- lost buzzer fixed

2012-12-07	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.2:
		- keep in sync with stable release .35

2012-12-06	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .55
	* Kernel 3.4:
		- keep in sync with stable release .22

2012-12-04	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .54
	* Kernel 3.4:
		- keep in sync with stable release .21
	* Kernel 3.6:
		- keep in sync with stable release .9

2012-11-29	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .53
	* Kernel 3.4:
		- keep in sync with stable release .20
	* Kernel 3.6:
		- keep in sync with stable release .8

2012-11-19	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .52
	* Kernel 3.4:
		- keep in sync with stable release .19
	* Kernel 3.6:
		- keep in sync with stable release .7

2012-11-05	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .51
	* Kernel 3.4:
		- keep in sync with stable release .18
	* Kernel 3.6:
		- keep in sync with stable release .6

2012-11-01	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .50
	* Kernel 3.2:
		- keep in sync with stable release .33
	* Kernel 3.4:
		- keep in sync with stable release .17
	* Kernel 3.6:
		- keep in sync with stable release .5

2012-10-22	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0: