@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.24-ptx-master Kernel Configuration
+# Linux/arm 3.4.24-ptx-2012.12.0 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
