@@ -11,7 +11,7 @@ Index: linux-3.2/Makefile
  PATCHLEVEL = 2
  SUBLEVEL = 35
 -EXTRAVERSION =
-+EXTRAVERSION = -ptx-master
++EXTRAVERSION = -ptx-2012.12.0
  NAME = Saber-toothed Squirrel
  
  # *DOCUMENTATION*
