@@ -11,7 +11,7 @@ Index: linux-3.4/Makefile
  PATCHLEVEL = 4
  SUBLEVEL = 24
 -EXTRAVERSION =
-+EXTRAVERSION = -ptx-master
++EXTRAVERSION = -ptx-2012.12.0
  NAME = Saber-toothed Squirrel
  
  # *DOCUMENTATION*
