@@ -44,14 +44,14 @@ Base System
 [ ] qml demo is a release
     [ ] rule file uses the release
 [x] bootloader is a release
-[ ] kernel-3.7.1 is a release
-[ ] kernel-3.6.11 is a release
-[ ] kernel-3.5.7 is a release
-[ ] kernel-3.4.24 is a release
-[ ] kernel-3.3.8 is a release
-[ ] kernel-3.2.35 is a release
+[x] kernel-3.7.1 is a release
+[x] kernel-3.6.11 is a release
+[x] kernel-3.5.7 is a release
+[x] kernel-3.4.24 is a release
+[x] kernel-3.3.8 is a release
+[x] kernel-3.2.35 is a release
 [x] kernel-3.1.10 is a release
-[ ] kernel-3.0.57 is a release
+[x] kernel-3.0.57 is a release
 [x] kernel-2.6.39.4 is a release
 [x] kernel-2.6.38.8 is a release
 
