@@ -8,6 +8,8 @@
 		- keep in sync with stable release .11
 	* Kernel 3.7:
 		- keep in sync with stable release .1
+	* Kernels:
+		- release all kernels and mark them accordingly
 
 2012-12-17	Juergen Beisert <jbe@pengutronix.de>
 
